--- a/routechoices/templates/base.html
+++ b/routechoices/templates/base.html
@@ -65,12 +65,9 @@
                 {% endif %}
             {% endblock footer %}
         {% endblock body %}
-        <script src="https://browser.sentry-cdn.com/7.114.0/bundle.min.js"
-                integrity="sha384-ZI11RF8XfI7ic0+HK1UnGkClkyjeQrHLUX+42WJHeu8+O94vBhb5Wivro/pn5lhG"
-                crossorigin="anonymous"></script>
+        <script src="https://js.sentry-cdn.com/{{ sentry_dsn }}.min.js" crossorigin="anonymous"></script>
         <script src="{% static 'scripts/load-local-variables.js' %}?_=2023112700"
                 data-site-version="{{ version }}"
-                data-sentry-dsn="{{ sentry_dsn }}"
                 data-api-root="{% host_url 'api_doc' host 'api' %}"></script>
         {% if analytics_enabled and request.host.name != 'dashboard' %}
             <script defer
