--- a/routechoices/templates/footer.html
+++ b/routechoices/templates/footer.html
@@ -9,7 +9,7 @@
                         <a href="{% host_url 'site:landing_page' host 'www' %}">Home</a>
                     </li>
                     <li>
-                        <a href="{% host_url 'site:public_events_view' host 'www' %}">Public Events</a>
+                        <a href="{% host_url 'site:public_events_view' host 'www' %}">Featured Events</a>
                     </li>
                     <li>
                         <a href="{% host_url 'site:trackers_view' host 'www' %}">Trackers</a>
