--- a/routechoices/templates/site/home.html
+++ b/routechoices/templates/site/home.html
@@ -84,19 +84,19 @@
                             <div class="row">
                                 <div>
                                     <h3 class="frontpage_text mb-3">
-                                        Set up your club effortlessly and start live GPS tracking your training sessions or competitions immediatly.
+                                        Create a club and start live GPS tracking your training sessions or competitions effortlessly.
                                     </h3>
                                     <h3 class="frontpage_text mb-3">
-                                        Our solution enables coaches, friends, and spectators, to follow in real time from any device with a web browser participants far away carrying dedicated GPS trackers or smartphones with our app.
+                                        Our solution enables anyone to follow in <b>real time</b> participants carrying a supported trackers.
                                     </h3>
                                     <h3 class="frontpage_text mb-3">
-                                        The Routechoices live GPS tracking platform offers a multitude of benefits: rapid analysis for the coaching staff, enhanced entertainment for the public, and increased safety for the runners.
+                                        Routechoices allows for: rapid analysis, entertainment, and, extra safety.
                                     </h3>
                                     <h3 class="frontpage_text mb-3">
-                                        After the event, replay the action as many times as you want and take advantage of the advanced features built in our interactive player.
+                                        After the event, replay the action as many times as you want and take advantage of the advanced features built in our web interface.
                                     </h3>
                                     <h3 class="frontpage_text mb-4">
-                                        Additionally, our integrated, privacy-friendly analytics tool provides valuable insights into who visits your pages.
+                                        Additionally, our analytics tool provides valuable insights into who visits your pages.
                                     </h3>
                                 </div>
                             </div>
@@ -108,12 +108,12 @@
                             <div class="row">
                                 <div>
                                     <h3 class="frontpage_text mb-3">
-                                        Since 2019, <b>Routechoices.com</b> has proudly hosted thousands events of all sizes, ranging from intimate personal training sessions to large-scale international gatherings.
-                                    </h3>
-                                        <h3 class="frontpage_text mb-3">Our state-of-the-art server, located in Finland, is finely tuned to handle events with hundreds of participants and thousands of online viewers from around the globe.
+                                        Since 2019, <b>Routechoices.com</b> has hosted thousands of events, ranging from intimate personal training sessions to large-scale international gatherings.
                                     </h3>
                                     <h3 class="frontpage_text mb-3">
-                                        Our modern software stack set us apart from the competition, it incorporates many technologies that ensure performance and reliability, guaranteeing that our live pages load quickly, regardless of your network quality, and stay up nicely throughout their duration no matter the amount of visitors.
+                                        Our state-of-the-art server, located in Finland, can handle events with hundreds of participants and thousands of online viewers around the globe.</h3>
+                                    <h3 class="frontpage_text mb-3">
+                                        Our modern software stack set us apart from the competition, guaranties that your live tracking pages load quickly.
                                     </h3>
                                 </div>
                             </div>
@@ -147,15 +147,15 @@
             <div>
                 <div class="container">
                     <div class="row text-center col-md-8 offset-md-2">
-                        <h1 class="video_text_overlay frontpage_text_bold">Track Your Events with Customizable and High-Precision Maps</h1>
+                        <h1 class="video_text_overlay frontpage_text_bold">Use Custom and High-Precision Maps</h1>
                     </div>
                     <div class="row justify-content-md-center">
                         <div class="col-md-8">
                             <h3 class="frontpage_text mb-3">
-                                Discover the ultimate flexibility in how you can experience live GPS tracking with our platform. You can choose the perfect map to suit your needs.
+                                Choose the perfect map to suit your needs.
                             </h3>
                             <h3 class="frontpage_text mb-3">
-                                Use your own copies of your maps for a fully personalized experience. Upload your files and use them as background for your live page... Or take advantage of our extensive selection of high-precision background maps. Access options like: "MapAnt" for Norway, Sweden, Finland, Estonia, Switzerland and Spain, High precision topographical maps for Norway (Kartverket), Finland (MML Peruskartta), France (IGN) and the UK (Ordnance Survey Leisure), As well as world wide layers such as OSM, OpenTopo, ArcGIS and Google Maps.
+                                Use your own copies of your maps. Upload your files and use them as background for your live tracking page, or take advantage of our selection of high-precision background maps.
                             </h3>
                             <h3 class="frontpage_text mb-4">
                                 Our platform puts you in control, letting you combine cutting-edge live GPS tracking with maps tailored to your activities.
