--- a/routechoices/templates/site/registration.html
+++ b/routechoices/templates/site/registration.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="{% static 'favicon.ico' %}?v=20250709" />
         <meta name="description"
-              content="A tool to register to public events on {{ site.name }}" />
+              content="A tool to register to events on {{ site.name }}" />
         <meta name="keywords" content="signup,enter,registration" />
         {% compress css %}
             <link rel="stylesheet"
